--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,6 +1,6 @@
 
 /*Big tablets to 1200px(width smaller tabs the 1148px row)*/
-media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1200px) {
 	.hero-text-box{
 		width: 100%;
 		padding: 0 2%;
@@ -11,7 +11,7 @@ media only screen and (max-width: 1200px) {
 
 
 /*Small tablets to big tablets : from 768px to 1023px */
-media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
 	body { font-size: 18px; }
 	section { padding: 60px 0; }
 
@@ -44,7 +44,7 @@ media only screen and (max-width: 1023px) {
 }
 
 /*Small phones to small tablets : from 481px to 767px */
-media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 	body { font-size: 14px; }
 	section { padding: 30px 0; }
 
@@ -115,7 +115,7 @@ media only screen and (max-width: 767px) {
 
 
 /*Small phones : from 0 to 480px */
-media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 	section { padding: 25px 0; }
 	.contact-form { width: 100%; }
 }
